# mcpp

./: .gitignore  CHANGELOG.md  config.yaml  config.yaml.example  pyproject.toml  start.sh
docs/: reasonix-proposal.md
docs/superpowers/plans/: 2026-07-05-mcpp.md
docs/superpowers/reviews/: 2026-07-05-mcpp-adversarial-plan.md  2026-07-05-mcpp-plan-review.md  mcp-tool-gateway-adversarial.md  mcpp-quality.md  mcpp-spec.md
docs/superpowers/specs/: mcp-tool-gateway.md
src/mcpp/: client-presets.yaml  clients.py  config.py  keypool.py  main.py  transform.py  upstream.py
src/mcpp/static/: index.html
tests/: adversarial_test.py  smoke.py  test_admin_api.py  test_clients.py  test_config.py  test_keypool.py  test_toolset_routing.py  test_transform.py  test_upstream.py
