[project]
name = "mcpp"
version = "0.1.0"
description = "MCP Plus — thin proxy gateway for MCP tools"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
mcpp = "mcpp.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
